[package]
edition = '2018'
name = "shiika"
version = "0.0.1"
authors = [ "Yutaka HARA <yutaka.hara.gmail.com>" ]

[dependencies]
shiika_parser = { path = "lib/shiika_parser/" }
shiika_core = { path = "lib/shiika_core/" }
skc_corelib = { path = "lib/skc_corelib/" }
skc_ast2hir = { path = "lib/skc_ast2hir/" }
skc_hir2ll = { path = "lib/skc_hir2ll/" }

anyhow = "1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm12-0"], rev = "27a64448404a50549e2a635b1b918c1a1537312f" }
failure = "0.1.6"
clap = { version = "3.0.0-beta.2", features = ["yaml"] }
either = "1.5.3"
env_logger = "0.8.2"
log = "0.4.11"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
mac-sys-info = "0.1.13"
