[package]
edition = "2021"
name = "shiika"
version = "0.7.0"
authors = [ "Yutaka HARA <yutaka.hara.gmail.com>" ]

[workspace]
members = [
  "lib/*",
]

[dependencies]
shiika_parser = { path = "lib/shiika_parser/" }
shiika_ast = { path = "lib/shiika_ast/" }
shiika_core = { path = "lib/shiika_core/" }
skc_corelib = { path = "lib/skc_corelib/" }
skc_ast2hir = { path = "lib/skc_ast2hir/" }
skc_mir = { path = "lib/skc_mir/" }
skc_codegen = { path = "lib/skc_codegen/" }

ariadne = "0.1.5"
anyhow = "1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm12-0"], rev = "02fb704" }
clap = { version = "3.1.18", features = ["derive"] }
either = "1.5.3"
env_logger = "0.8.2"
log = "0.4.11"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
mac-sys-info = "0.1.13"

chrono = "0.4"
chrono-tz = "0.6"
