[package]
name = "skc_ast2hir"
version = "0.1.0"
edition = "2018"

[dependencies]
shiika_core = { path = "../shiika_core" }
shiika_ast = { path = "../shiika_ast" }
skc_hir2ll = { path = "../skc_hir2ll" }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.11"
#serde = { version = "1.0.125", features = ["derive"] }
#serde_json = "1.0"
#either = "1.5.3"

# FIXME: Used in accessor.rs.
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm12-0"], rev = "27a64448404a50549e2a635b1b918c1a1537312f" }
