[package]
name = "skc_ast2hir"
version = "0.1.0"
edition = "2018"

[dependencies]
shiika_core = { path = "../shiika_core" }
shiika_ast = { path = "../shiika_ast" }
skc_corelib = { path = "../skc_corelib" }
skc_hir = { path = "../skc_hir" }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.11"

# TODO: used for libraryExports
skc_hir2ll = { path = "../skc_hir2ll" }
