[package]
name = "skc_ast2hir"
version = "0.1.0"
edition = "2021"

[dependencies]
shiika_core = { path = "../shiika_core" }
shiika_ast = { path = "../shiika_ast" }
skc_corelib = { path = "../skc_corelib" }
skc_hir = { path = "../skc_hir" }
ariadne = "0.1.5"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.11"

# TODO: used for libraryExports
skc_mir = { path = "../skc_mir" }
