[package]
name = "skc_async_experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm16-0"], rev = "4030f76" }
nom = "7.1.3"
peg = "0.8.2"
ariadne = "0.3.0"
anyhow = "1.0"
either = "1.9.0"
nom_locate = "4.2.0"
os_info = "3.7.0"
