[package]
name = "skc_async_experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
shiika_ast = { path = "../shiika_ast" }
shiika_parser = { path = "../shiika_parser" }
shiika_ffi = { path = "../shiika_ffi" }
shiika_core = { path = "../shiika_core" }
skc_ast2hir = { path = "../skc_ast2hir" }
skc_hir = { path = "../skc_hir" }
skc_mir = { path = "../skc_mir" }

inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm16-0"], rev = "4030f76" }
nom = "7.1.3"
peg = "0.8.2"
ariadne = "0.3.0"
anyhow = "1.0"
either = "1.9.0"
nom_locate = "4.2.0"
os_info = "3.7.0"
clap = { version = "4.5.35", features = ["derive"] }
log = "0.4.25"
env_logger = "0.11.6"
# To read exports.json5
json5 = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
insta = { version = "1.32.0", features = ["glob"] }
