[package]
name = "skc_corelib"
version = "0.1.0"
authors = ["Yutaka HARA <yutaka.hara+github@gmail.com>"]
edition = "2018"

[dependencies]
shiika_core = { path = "../shiika_core" }
shiika_ast = { path = "../shiika_ast" }
shiika_parser = { path = "../shiika_parser" }
skc_hir = { path = "../skc_hir" }
skc_hir2ll = { path = "../skc_hir2ll" }
anyhow = "1.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
