[package]
name = "skc_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
#tokio = { path = "../tokio/tokio", features = ["full"] }
#bdwgc-alloc = { version = "0.6.5", default-features=false, features = ["cmake"] }
