[package]
name = "skc_rustlib"
version = "0.1.0"
authors = ["Yutaka HARA <yutaka.hara+github@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
shiika_ffi_macro = { path = "../shiika_ffi_macro" }
bdwgc-alloc = { version = "0.6.0", default-features=false, features = ["cmake"] }
plain = "0.2.3"
# For Random
rand = "0.8.5"
# For String#chars
unicode-segmentation = "1.7.1"
# For Time
chrono = "0.4"
chrono-tz = "0.6"
